@@ -1,5 +1,9 @@
 2003-08-01  Chris Toshok  <toshok@ximian.com>
 
+	* backend/ebook/e-book-async.c: mostly finished.
+
+2003-08-01  Chris Toshok  <toshok@ximian.com>
+
 	* backend/ebook/e-book-async.[ch]: new files, create async methods
 	similar to the old ebook api that use GThread/GAsyncQueue to
 	simulate the old async behavior.
